--- a/apps/app-two/src/index.html
+++ b/apps/app-two/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>app-two</title>
     <base href="/" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
